deploy/gitops/focus-time-timer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: focus-time-timer
  labels:
    app: focus-time-timer
spec:
  selector:
    app: focus-time-timer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
